<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2025. Hashan Silva
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_daily_gospel_fragment"
            android:icon="@drawable/ic_menu_book"
            android:title="@string/daily_gospel_menu_title" />

        <item
            android:id="@+id/nav_rosary_fragment"
            android:icon="@drawable/ic_menu_rosary"
            android:title="@string/rosary_menu_title" />

        <item
            android:id="@+id/nav_select_lang_fragment"
            android:orderInCategory="90"
            android:icon="@drawable/ic_language"
            android:title="@string/menu_language"
            app:showAsAction="never"
            />

        <item
            android:id="@+id/nav_about_fragment"
            android:icon="@drawable/ic_menu_info"
            android:orderInCategory="100"
            android:title="@string/about_title"
            app:showAsAction="never"/>

    </group>

</menu>